added more project placeholders

--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -1,22 +1,74 @@
 [
     {
         "title": "Title1",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Description1"
     },
     {
         "title": "Title2",
+        "year": "2024",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
         "description": "Description2"
     },
     {
         "title": "Title3",
+        "year": "2023",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Description1"
+        "description": "Description3"
     },
     {
         "title": "Title4",
+        "year": "2022",
         "image": "https://vis-society.github.io/labs/2/images/empty.svg",
-        "description": "Description2"
+        "description": "Description4"
+    },
+    {
+        "title": "Title5",
+        "year": "2024",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description5"
+    },
+    {
+        "title": "Title6",
+        "year": "2024",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description6"
+    },
+    {
+        "title": "Title7",
+        "year": "2023",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description7"
+    },
+    {
+        "title": "Title8",
+        "year": "2022",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description8"
+    },
+    {
+        "title": "Title9",
+        "year": "2024",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description9"
+    },
+    {
+        "title": "Title10",
+        "year": "2024",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description10"
+    },
+    {
+        "title": "Title11",
+        "year": "2023",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description11"
+    },
+    {
+        "title": "Title12",
+        "year": "2022",
+        "image": "https://vis-society.github.io/labs/2/images/empty.svg",
+        "description": "Description12"
     }
 ]
