added MAPC transfer fee dashboard to projects

--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -14,6 +14,13 @@
         "url": "https://www.anatomicalcrochet.com/2022/06/life-sized-skeleton.html"
     },
     {
+        "title": "Impact and Benefits of a Transfer Fee",
+        "year": "2024",
+        "image": "/images/mapc_dashboard.png",
+        "description": "A data visualization tool and dashboard for the Massachusetts Area Planning Council to raise funds for affordable housing by determining the most equitable and effective way to implement a transfer fee in the Greater Boston area.",
+        "url": "https://qperian.github.io/6c35-project/"
+    },
+    {
         "title": "Screening Tool for Equity Analysis of Projects (STEAP)",
         "year": "2023",
         "image": "/images/steap_screenshot.png",
