--- a/src/lib/projects.json
+++ b/src/lib/projects.json
@@ -17,7 +17,7 @@
         "title": "Impact and Benefits of a Transfer Fee",
         "year": "2024",
         "image": "/images/mapc_dashboard.png",
-        "description": "A data visualization tool and dashboard for the Massachusetts Area Planning Council to raise funds for affordable housing by determining the most equitable and effective way to implement a transfer fee in the Greater Boston area.",
+        "description": "A data visualization tool and dashboard for the Metropolitan Area Planning Council (MAPC) to raise funds for affordable housing by determining the most equitable and effective way to implement a transfer fee in the Greater Boston area.",
         "url": "https://qperian.github.io/6c35-project/"
     },
     {
